# mundos-risk-analysis

./: .gitignore  PROJECT_OVERVIEW.md  README.md  baseline_model.py  best_pca_100_pipeline.pkl  demo_synthetic_pipeline_inference.py  inference.py  inference_pca_pipeline.py  leads.csv  leads_1.csv  load_leads.py  main.py  pca_100_sentiment_std.json  pca_50_sentiment_std.json  pca_reduce.py  predictions_interest.meta.json  pyproject.toml  requirements.txt  show_classification_report.py
extras/: generate_embeddings.py  masking_stress_test.py  model_diagnostics.py  new_leads_test.csv  pca_100_only_results.json  pca_100_sentiment_std.npz  pca_40_only_results.json  pca_40_sentiment_std.components.npy  pca_40_sentiment_std.json  pca_40_sentiment_std.npz  pca_50_only_results.json  pca_50_sentiment_std.components.npy  pca_50_sentiment_std.npz  pca_sweep_results.json  sentiment_features.py  show_pca_pipeline_report.py  threshold_analysis.py  train_logreg_reduced.py  train_pca_pipeline.py
fastapi_backend/: README.md  __init__.py  app.py  best_pca_50_pipeline.pkl  best_pca_pipeline.pkl  dev_check.py  main.py  mundos_risk_analysis.ipynb
interest_multiclass/: MODEL_CARD.md  README.md  __init__.py  config.py  data_integrity_report.json  data_validation.py  generate_embeddings_interest.py  generate_sentiment_interest.py  inference.py  train_logreg.py  train_rf.py
tests/: test_feature_combination.py  test_interest_logreg_training.py  test_interest_rf_training.py  test_interest_validation.py  test_load_leads.py  test_pca_reduce.py  test_pooling_utils.py  test_sentiment_features.py  (+1 more)
(+4 files in other folders)
